# cocotola-auth/controller/handler/auth/auth.go
@@ -7,6 +7,7 @@ import (
 // InitAuthRouter sets up the routes for auth operations under the given parent router group.
 func InitAuthRouter(
 	authenticateHandler *PasswordAuthenticateHandler,
+	guestAuthenticateHandler *GuestAuthenticateHandler,
 	refreshHandler *RefreshHandler,
 	revokeHandler *RevokeHandler,
 	getMeHandler *GetMeHandler,
@@ -17,6 +18,7 @@ func InitAuthRouter(
 	authGroup := parentRouterGroup.Group("auth", middleware...)
 
 	authGroup.POST("/authenticate", authenticateHandler.Authenticate)
+	authGroup.POST("/guest/authenticate", guestAuthenticateHandler.Authenticate)
 	authGroup.POST("/logout", revokeHandler.Logout)
 	authGroup.POST("/refresh", refreshHandler.Refresh)
 	authGroup.POST("/revoke", authMiddleware, revokeHandler.Revoke)
